# Computer-Networking-Labs

./: .gitignore
Assignment 1/: myftpclient  myftpserver  myftpserver.c
Assignment 2/: CMakeLists.txt
Assignment 2/data/: test.txt
Assignment 2/opt_src/: receiver.c  rtp.c  rtp.h  sender.c
Assignment 2/src/: receiver.c  rtp.c  rtp.h  sender.c
Assignment 2/templates/basic/: receiver.c  sender.c
Assignment 2/templates/recommended/: sender.c
Assignment 2/testcase/: 测试用例详解.docx
Assignment 2/testcase/test/: broken_receiver
Assignment 3/AutoTest/Handin/1900094810-WebLab3/: agent  agent.cpp  common.h  location.txt  router  router.cpp
Assignment 3/AutoTest/Test/: test.py
Assignment 3/AutoTest/Test/TestCases/case1/: case1-answer-1.txt  case1-answer-2.txt  case1-answer-3.txt  case1-answer-4.txt  case1-command-1.txt  case1-command-2.txt  case1-command-3.txt  case1-command-4.txt  case1-topology.txt
Assignment 3/AutoTest/Test/TestCases/case2/: case2-answer-1.txt  case2-answer-2.txt  case2-answer-3.txt  case2-answer-4.txt  case2-command-1.txt  case2-command-2.txt  case2-command-3.txt  case2-command-4.txt  case2-location.txt  case2-topology.txt
Assignment 3/AutoTest/Test/TestCases/case3/: case3-answer-1.txt  case3-answer-2.txt  case3-answer-3.txt  case3-answer-4.txt  case3-command-1.txt  case3-command-2.txt  case3-command-3.txt  case3-command-4.txt  case3-location.txt  case3-topology.txt
Assignment 3/AutoTest/Test/TestCases/case4/: case4-command-1.txt  (+5 more)
Assignment 3/attemp/: Makefile  agent  agent.cpp  common.h  location.txt  router  router.cpp
(+6 files in other folders)
